--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Get a Quote
 </div>
 </nav>
 <!-- Hero Section -->
-<section class="hero-section w-full h-screen relative mt-16">
+<section class="hero-section w-full h-screen relative mt-16 px-4 sm:px-0">
 <div class="hero-overlay absolute inset-0 flex items-center">
 <div class="container mx-auto px-4">
 <div class="max-w-2xl">
@@ -115,7 +115,7 @@ View Our Work
 </div>
 </section>
 <!-- Services Section -->
-<section id="services" class="py-20 bg-gray-50">
+<section id="services" class="py-10 md:py-20 bg-gray-50">
 <div class="container mx-auto px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Premium Services</h2>
@@ -264,7 +264,7 @@ Learn More
 </div>
 </section>
 <!-- Why Choose Us -->
-<section id="about" class="py-20 bg-white">
+<section id="about" class="py-10 md:py-20 bg-white">
 <div class="container mx-auto px-4">
 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
 <div>
@@ -331,7 +331,7 @@ Learn More
 </div>
 </section>
 <!-- Projects Section -->
-<section id="projects" class="py-20 bg-gray-50">
+<section id="projects" class="py-10 md:py-20 bg-gray-50">
 <div class="container mx-auto px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Featured Projects</h2>
@@ -523,7 +523,7 @@ View All Projects
 </div>
 </section>
 <!-- Testimonials Section -->
-<section class="py-20 bg-white">
+<section class="py-10 md:py-20 bg-white">
 <div class="container mx-auto px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">What Our Clients Say</h2>
@@ -609,7 +609,7 @@ View All Projects
 </div>
 </section>
 <!-- CTA Section -->
-<section class="py-20 bg-primary">
+<section class="py-10 md:py-20 bg-primary">
 <div class="container mx-auto px-4 text-center">
 <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">Ready to Transform Your Space?</h2>
 <p class="text-xl text-blue-100 mb-10 max-w-3xl mx-auto">Let us help you create a stunning environment that elevates your brand and impresses your customers.</p>
@@ -718,7 +718,7 @@ View Our Portfolio
 </div>
 </section>
 <!-- Contact Section -->
-<section id="contact" class="py-20 bg-gray-50">
+<section id="contact" class="py-10 md:py-20 bg-gray-50">
 <div class="container mx-auto px-4">
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Get In Touch</h2>
@@ -868,8 +868,8 @@ Send Message
 <h3 class="text-xl font-bold mb-6">Newsletter</h3>
 <p class="text-gray-400 mb-6">Subscribe to our newsletter to receive updates on our latest projects and promotions.</p>
 <form class="mb-6">
-<div class="flex">
-<input type="email" placeholder="Your email address" class="px-4 py-3 !rounded-l-button border-none flex-1 text-gray-800">
+<div class="flex flex-col sm:flex-row">
+<input type="email" placeholder="Your email address" class="px-4 py-3 !rounded-l-button border-none flex-1 text-gray-800 mb-2 sm:mb-0">
 <button type="submit" class="bg-primary text-white px-4 py-3 !rounded-r-button font-medium hover:bg-blue-700 transition-colors whitespace-nowrap">
 Subscribe
 </button>
