--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ width: 100%;
 .active::after {
 width: 100%;
 }
+html, body {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 </style>
 </head>
 <body class="overflow-x-hidden">
