--- a/index.html
+++ b/index.html
@@ -316,19 +316,19 @@ Learn More
 </div>
 <div class="grid grid-cols-2 gap-6">
 <div class="bg-gray-50 p-6 rounded-lg text-center">
-<div class="text-4xl font-bold text-primary mb-2">15+</div>
+<div class="text-4xl font-bold text-primary mb-2 why-counter" data-target="15" data-suffix="+">0</div>
 <div class="text-gray-600">Years Experience</div>
 </div>
 <div class="bg-gray-50 p-6 rounded-lg text-center">
-<div class="text-4xl font-bold text-primary mb-2">500+</div>
+<div class="text-4xl font-bold text-primary mb-2 why-counter" data-target="500" data-suffix="+">0</div>
 <div class="text-gray-600">Projects Completed</div>
 </div>
 <div class="bg-gray-50 p-6 rounded-lg text-center">
-<div class="text-4xl font-bold text-primary mb-2">350+</div>
+<div class="text-4xl font-bold text-primary mb-2 why-counter" data-target="350" data-suffix="+">0</div>
 <div class="text-gray-600">Happy Clients</div>
 </div>
 <div class="bg-gray-50 p-6 rounded-lg text-center">
-<div class="text-4xl font-bold text-primary mb-2">45+</div>
+<div class="text-4xl font-bold text-primary mb-2 why-counter" data-target="45" data-suffix="+">0</div>
 <div class="text-gray-600">Team Members</div>
 </div>
 </div>
@@ -1075,6 +1075,46 @@ top: 0,
 behavior: 'smooth'
 });
 });
+});
+</script>
+<!-- Add this script just before </body> to animate numbers in "Why Choose Us" section -->
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  // Helper to animate a single counter
+  function animateCounter(el, target, duration = 1200) {
+    let start = 0;
+    let startTimestamp = null;
+    const step = (timestamp) => {
+      if (!startTimestamp) startTimestamp = timestamp;
+      const progress = Math.min((timestamp - startTimestamp) / duration, 1);
+      el.textContent = Math.floor(progress * target);
+      if (progress < 1) {
+        window.requestAnimationFrame(step);
+      } else {
+        el.textContent = target + (el.dataset.suffix || '');
+      }
+    };
+    window.requestAnimationFrame(step);
+  }
+
+  // Intersection Observer to trigger animation
+  const counters = document.querySelectorAll('.why-counter');
+  let animated = false;
+  if (counters.length) {
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting && !animated) {
+          animated = true;
+          counters.forEach(counter => {
+            const target = parseInt(counter.dataset.target, 10);
+            animateCounter(counter, target);
+          });
+          obs.disconnect();
+        }
+      });
+    }, { threshold: 0.3 });
+    counters.forEach(counter => observer.observe(counter));
+  }
 });
 </script>
 </body>
