--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ Subscribe
 </div>
 </footer>
 <!-- Floating WhatsApp Button -->
-<a href="#" class="floating-whatsapp fixed bottom-6 right-6 w-14 h-14 bg-green-500 !rounded-full flex items-center justify-center z-50 hover:bg-green-600 transition-colors">
+<a href="https://wa.me/+919502541555" class="floating-whatsapp fixed bottom-6 right-6 w-14 h-14 bg-green-500 !rounded-full flex items-center justify-center z-50 hover:bg-green-600 transition-colors">
 <i class="ri-whatsapp-fill text-white text-2xl"></i>
 </a>
 <!-- Back to Top Button -->
